adding projects and some tweeking

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prince Kumar Portfolio</title>
+    <title>Prince Kumar</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,9 +43,9 @@
     <hr>
 
     <footer>
-        <div class="link"><a href="">E-Mail</a></div>
-        <div class="link"><a href="">Linked in</a></div>
-        <div class="link"><a href="">Git Hub</a></div>
+        <!-- <div class="link"><a target="_blank" href="">E-Mail</a></div> -->
+        <div class="link"><a target="_blank" href="https://www.linkedin.com/in/prince-kumar-508119234">Linked in</a></div>
+        <div class="link"><a target="_blank" href="https://github.com/princekumargit">Git Hub</a></div>
     </footer>
 
     
