--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
     <hr>
 
     <footer>
-        <div class="link"><a href="">E-Mail</a></div>
-        <div class="link"><a href="">Linked in</a></div>
-        <div class="link"><a href="">Git Hub</a></div>
+        <!-- <div class="link"><a target="_blank" href="">E-Mail</a></div> -->
+        <div class="link"><a target="_blank" href="https://www.linkedin.com/in/prince-kumar-508119234">Linked in</a></div>
+        <div class="link"><a target="_blank" href="https://github.com/princekumargit">Git Hub</a></div>
     </footer>
     
 </body>
