--- a/contact.html
+++ b/contact.html
@@ -26,15 +26,17 @@
 
     <main>
         <div class="container">
-            <form  class="contactform" onsubmit="sendEmail(); reset(); return false;">
+            <form  id="contactform" name="submit-to-google-sheet" class="contactform"  action="https://formspree.io/f/xoqzgybd" method="post">
                 <div>
                     <p class="specialtext" id="contactme">Contact ME!</p>
                 </div>
+
                 <input type="text" name="" id="name" placeholder="Your Name" required>
-                <input type="email" class="email" placeholder="E-Mail" required>
-                <input type="number" class="phoneno" placeholder="Phone No.">
+                <input type="email" name="email" class="email" id="email" placeholder="E-Mail" required>
+                <input type="number" class="phone" id="phone" placeholder="Phone No.">
                 <textarea name="" id="message" placeholder="Message" cols="30" rows="10" required></textarea>
-                <button type="submit">SUBMIT</button>
+                <button type="submit" >SUBMIT</button>
+                <p id="my-form-status"></p>
             </form>
         </div>
     </main>
@@ -46,7 +48,6 @@
         <div class="link"><a target="_blank" href="https://www.linkedin.com/in/prince-kumar-508119234">Linked in</a></div>
         <div class="link"><a target="_blank" href="https://github.com/princekumargit">Git Hub</a></div>
     </footer>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="app.js"></script>
     
 </body>
